[WEB-38] Stop cutting off panel shadows

--- a/scss/components/_page-content.scss
+++ b/scss/components/_page-content.scss
@@ -4,7 +4,7 @@
   flex-grow: 1;
   flex-shrink: 0;
   margin: 2rem;
-  overflow: auto;
+//  overflow: auto;
 
   section {
     flex-shrink: 0;
